Style Update for login overflow fix

--- a/Frontend/src/css/updateprofile.css
+++ b/Frontend/src/css/updateprofile.css
@@ -7,9 +7,7 @@
 position: relative;
 }
 
-.edit-cnt{
-    height: 100svh;
-}
+
 
 .lbl-edt-photo{
     font-weight: bold;
